bugfix: blurry text using translate3d

--- a/code/css/hello.css
+++ b/code/css/hello.css
@@ -66,7 +66,7 @@
     position: fixed;
     top: 0%;
     left: 50%;
-    transform: translate3d(-50%, 0%, 0);
+    transform: translate(-50%, 0%);
     height: 1080px;
     width: 1920px;
 }
@@ -75,8 +75,8 @@
     z-index: 2;
     position: fixed;
     top: 0%;
-    left: 52%;
-    transform: translate3d(-50%, 0%, 0);
+    left: 50%;
+    transform: translate(-50%, 0%);
     height: 1080px;
     width: 1920px;
 }
@@ -90,13 +90,26 @@
     height: 647px;
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate(-50%, -50%); 
     background-color: #fff;
-    box-shadow:0px 3px 4px rgba(51, 51, 51, 0.05);
+    box-shadow:0px 3px 4px rgba(50, 50, 50, 0.08);
 }
 .textwrapper {
-    padding: 4em
+    padding: 4em;
 }
+.textwrapper p {
+    background: #fff;
+}
+
+.body {
+    margin-top:6.5em;
+}
+
+.greetings {
+    font-size: 0.95rem
+}
+
+
 
 body > .container-fluid { overflow: hidden; }        /* width fix */
 body > .container-fluid > * { overflow: visible; }   /* reset back to normal */
